syntax = "proto3";
package lbm.token.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/line/lbm-sdk/x/token";

// EventTransfer is emitted on Msg/Transfer
message EventTransfer {
  string class_id = 1;
  string from     = 2;
  string to       = 3;
  string value    = 4 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// EventApproval is emitted on Msg/Approve
message EventApproval {
  string class_id = 1;
  string owner    = 2;
  string spender  = 3;
  string value    = 4 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}
